k8s/addons/grafana/grafana-gatewayapi-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: wsi
      namespace: wsi
      sectionName: http
  rules:
    - backendRefs:
        - name: grafana
          kind: Service
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
